    <https://github.com/jhy/jsoup/pull/1964>

  * Bugfix: in Jsoup.connect(url), URL paths containing a %2B were incorrectly recoded to a '+', or a '+' was recoded
    to a ' '. Fixed by reverting to the previous behavior of not encoding supplied paths, other than normalizing to
    ASCII.
    <https://github.com/jhy/jsoup/issues/1952>

  * Bugfix: in Jsoup.connect(url), the ConstrainableInputStream would clear Thread interrupts when reading the body.
    This precluded callers from spawning a thread, running a number of requests for a length of time, then joining that
    thread after interrupting it.
    <https://github.com/jhy/jsoup/issues/1991>

  * Bugfix: when tracking HTML source positions, the closing tags for H1...H6 elements were not tracked correctly.
    <https://github.com/jhy/jsoup/issues/1987>

  * Bugfix: in Jsoup.connect(), a DELETE method request did not support a request body.
    <https://github.com/jhy/jsoup/issues/1972>

  * Bugfix: when calling Element.cssSelector() on an extremely deeply nested element, a StackOverflowError could occur.
    Further, a StackOverflowError may occur when running the query.
    <https://github.com/jhy/jsoup/issues/2001>

  * Bugfix: appending a node back to its original Element after empty() would throw an Index out of bounds exception.
    Also, now the child nodes that were removed have their parent node cleared, fully detaching them from the original
    parent.
    <https://github.com/jhy/jsoup/issues/2013>

  * Bugfix: in Jsoup.Connection when adding headers, the value may have been assumed to be an incorrectly decoded
    ISO_8859_1 string, and re-encoded as UTF-8. The value is now left as-is.

  * Change: removed previously deprecated methods Document#normalise, Element#forEach(org.jsoup.helper.Consumer<>),
    Node#forEach(org.jsoup.helper.Consumer<>), and the org.jsoup.helper.Consumer interface; the latter being a
    previously required compatibility shim prior to Android's de-sugaring support.
